updated resizing smoothness

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Your Company Name</title>
 
     <!-- CSS -->
@@ -20,6 +21,11 @@
         <div class="logo">
             <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
         </div>
+        <button class="mobile-menu-btn" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <div class="nav-container">
             <ul class="main-nav">
                 <li><a href="/why-prophet">Why Prophet Analytics</a></li>
