added contact form

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Your Company Name</title>
+    <title>Prophet Analytics</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="static/css/reset.css">
@@ -36,7 +36,7 @@
             </ul>
             <ul class="auth-nav">
                 <li><a href="/login" class="login-btn">Login</a></li>
-                <li><a href="/contact" class="contact-btn">Contact Us</a></li>
+                <li><a href="contact.html" class="contact-btn">Contact Us</a></li>
             </ul>
         </div>
     </nav>
