--- a/contact.html
+++ b/contact.html
@@ -43,26 +43,32 @@
                 <h1>We'd love to hear from you</h1>
                 <p>Fill out the form and a Prophet Analytics team member will reach out</p>
 
-                <form class="contact-form" id="contactForm">
+                <form class="contact-form"
+                      id="contactForm"
+                      method="POST"
+                      data-netlify="true"
+                      name="contact-prophet">
+                    <input type="hidden" name="form-name" value="contact-prophet">
+
                     <div class="form-row">
                         <div class="form-group">
                             <label for="firstName">* First Name</label>
-                            <input type="text" id="firstName" required>
+                            <input type="text" id="firstName" name="firstName" required>
                         </div>
                         <div class="form-group">
                             <label for="lastName">* Last Name</label>
-                            <input type="text" id="lastName" required>
+                            <input type="text" id="lastName" name="lastName" required>
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
                             <label for="company">* Company</label>
-                            <input type="text" id="company" required>
+                            <input type="text" id="company" name="company" required>
                         </div>
                         <div class="form-group">
                             <label for="email">* Email</label>
-                            <input type="email" id="email" required>
+                            <input type="email" id="email" name="email" required>
                         </div>
                     </div>
 
@@ -119,6 +125,7 @@
     </section>
 
     <!-- JavaScript -->
+    <script src="static/js/contact.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 </html>
