--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 
                     <div class="form-group full-width">
                         <label for="message">* Message</label>
-                        <textarea id="message" rows="4" required></textarea>
+                        <textarea id="message" name="message" rows="4" required></textarea>
                     </div>
 
                     <div class="form-group checkbox-group">
