--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
+                <a href="index.html">
+                    <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
+                </a>
             </div>
             <div class="nav-container">
                 <ul class="main-nav">
@@ -78,8 +80,8 @@
                             <select id="country" required>
                                 <option value="US">United States</option>
                                 <option value="CA">Canada</option>
-                                <!-- Add more countries as needed -->
-                            </select>
+                                <option value="Oth">Other</option>
+\                            </select>
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone</label>
