--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header>
     <nav>
         <div class="logo">
-            <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
+            <a href="#" onclick="return false;">
+                <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
+            </a>
         </div>
         <button class="mobile-menu-btn" aria-label="Toggle menu">
             <span></span>
