--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--index.html-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +10,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/header.css">
+
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -16,37 +19,12 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-    <nav>
-        <div class="logo">
-            <a href="#" onclick="return false;">
-                <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
-            </a>
-        </div>
-        <button class="mobile-menu-btn" aria-label="Toggle menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-        <div class="nav-container">
-            <ul class="main-nav">
-                <li><a href="/why-prophet">Why Prophet Analytics</a></li>
-                <li><a href="/product">Product</a></li>
-                <li><a href="/solutions">Solutions</a></li>
-                <li><a href="/resources">Resources</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-            <ul class="auth-nav">
-                <li><a href="/login" class="login-btn">Login</a></li>
-                <li><a href="contact.html" class="contact-btn">Contact Us</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+    <div id="header-placeholder"></div>
+
 
     <!-- Hero Section -->
 <section class="hero">
-    <div class="hero-container">  <!-- Make sure you have this container div -->
+    <div class="hero-container">
         <div class="hero-content">
             <div class="hero-title">
                 <h1 class="main-heading">Advanced Analytics.</h1>
@@ -86,5 +64,7 @@
 
     <!-- JavaScript -->
     <script src="static/js/main.js"></script>
+    <script src="static/js/header.js"></script>
+
 </body>
 </html>
