added dropdown to contact page

--- a/contact.html
+++ b/contact.html
@@ -8,35 +8,16 @@
     <!-- CSS -->
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/header.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=General+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header (Same as main page) -->
-    <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html">
-                    <img src="static/images/PA_LOGO_20241023_v4.jpg" alt="Prophet Analytics Logo">
-                </a>
-            </div>
-            <div class="nav-container">
-                <ul class="main-nav">
-                    <li><a href="/why-prophet">Why Prophet Analytics</a></li>
-                    <li><a href="/product">Product</a></li>
-                    <li><a href="/solutions">Solutions</a></li>
-                    <li><a href="/resources">Resources</a></li>
-                    <li><a href="/about">About</a></li>
-                </ul>
-                <ul class="auth-nav">
-                    <li><a href="/login" class="login-btn">Login</a></li>
-                    <li><a href="/contact" class="contact-btn">Contact Us</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+        <!-- Header -->
+        <div id="header-placeholder"></div>
+
 
     <!-- Contact Section -->
     <section class="contact-section">
@@ -129,5 +110,6 @@
     <!-- JavaScript -->
     <script src="static/js/contact.js"></script>
     <script src="static/js/main.js"></script>
+    <script src="static/js/header.js"></script>
 </body>
 </html>
